<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    android:padding="@dimen/default_padding"
    tools:context="com.example.android.musicalstructure.MainActivity">

        <TextView
            style="@style/MainTitle"
            android:text="@string/home_title" />

        <TextView
            style="@style/ActivityDescription"
            android:text="@string/home_description" />

        <TextView
            android:id="@+id/now_playing"
            style="@style/Button"
            android:text="@string/now_playing_button" />

        <TextView
            android:id="@+id/albums"
            style="@style/Button"
            android:text="@string/albums_button" />

        <TextView
            android:id="@+id/artists"
            style="@style/Button"
            android:text="@string/artists_button" />
    </LinearLayout>
</ScrollView>